# NES-Emulator

./: .clang-format  .clang-tidy  .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.sh  clean.sh  config.h.in  demo-file  imgui.ini  run.sh  test.sh  testlinting.txt  vcpkg.json
.github/: CONTRIBUTING.md
.github/workflows/: build-container.yml  build-linux.yml  build-mac-arm.yml  build-test-release-windows.yml  build-test-release.yml  build-windows.yml  create-container.yml  deploy-container.yml  lint-format-container.yml  lint-format-test.yml  lint-format.yml  test-mac.yml
core/: apu-types.h  apu.cpp  apu.h  bus.cpp  bus.h  cartridge-header.h  cartridge.cpp  cartridge.h  cpu-types.h  cpu.cpp  cpu.h  ppu-types.h  ppu.cpp  ppu.h  utils.cpp  utils.h
core/blargg/: Simple_Apu.h  readme.md  usage.md
core/blargg/nes_apu/: Blip_Buffer.h  Blip_Synth.h  Nes_Apu.cpp  Nonlinear_Buffer.cpp  Nonlinear_Buffer.h  blargg_common.h
core/mappers/: mapper-base.h  mapper0.cpp  mapper0.h  mapper1.cpp  mapper1.h  mapper2.cpp  mapper2.h  mapper3.cpp  mapper3.h  mapper4.cpp  mapper4.h
docker/: alpine-Dockerfile  ubuntu-Dockerfile  windows-Dockerfile
docker-vcpkg/: vcpkg.json
docker/lint/: Dockerfile
docs/: CLI_MacOS.md  CLI_Tools.md  CLion_MacOS.md  CLion_Windows.md  Docker_Tools.md  tips.md
frontend/: example.cpp  main.cpp  ui-component.cpp  ui-manager.cpp  ui.cpp
frontend/audio/: Sound_Queue.cpp  Sound_Queue.h
frontend/example/: example.cpp
frontend/include/: custom-components.h  imgui-spectrum.h  renderer-base.h  renderer-sdl2internal.h  renderer-sdl2opengl3.h  renderer.h  theme.h  ui-component.h  ui-manager.h  ui.h
frontend/ui/: cartridge-info.h  cpu-viewer.h  debugger.h  demo-window.h  input.h  log.h  main-menubar.h  memory-display.h  nametable.h  notification.h  overlay.h  palettes.h  pattern-tables.h  ppu-viewer.h  register-viewer.h  sprites.h
include/: bus.h  cartridge.h  cpu.h  global-types.h  ines2.h  paths-linux.h  paths-mac.h  paths-windows.h  paths.h  ppu.h  utils.h
include/mappers/: mapper-base.h  mapper0.h  mapper1.h  mapper2.h
lib/Nes_Snd_Emu/: demo.cpp  notes.txt  usage.md
lib/Nes_Snd_Emu/nes_apu/: Blip_Buffer.cpp  Blip_Buffer.h  Blip_Synth.h  Multi_Buffer.cpp  Multi_Buffer.h  Nes_Apu.cpp  Nes_Apu.h  Nes_Namco.cpp  Nes_Namco.h  Nes_Oscs.cpp  Nes_Oscs.h  Nes_Vrc6.cpp  Nes_Vrc6.h  Nonlinear_Buffer.cpp  Nonlinear_Buffer.h  Simple_Apu.cpp  Simple_Apu.h  apu_snapshot.cpp  apu_snapshot.h  blargg_common.h  blargg_source.h  config.hpp  cstdint.hpp  static_assert.hpp
lib/Nes_Snd_Emu/sdl/: Sound_Queue.cpp  Sound_Queue.h
lib/sdl2/: license.md
lib/sdl2/linux/include/SDL2/: SDL_config.h  SDL_revision.h  compare.py
lib/sdl2/mac/SDL2.framework/Headers/SDL2/: SDL.h  SDL_assert.h  SDL_config_macosx.h  SDL_events.h  SDL_gesture.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_keycode.h  SDL_loadso.h  SDL_locale.h  SDL_messagebox.h  SDL_misc.h  SDL_opengl_glext.h  SDL_opengles2.h  SDL_opengles2_khrplatform.h  SDL_pixels.h  SDL_platform.h  SDL_rect.h  SDL_scancode.h  SDL_shape.h  SDL_surface.h  SDL_system.h  begin_code.h  close_code.h
lib/sdl2/mac/SDL2.framework/Versions/A/Headers/SDL2/: SDL_bits.h  SDL_endian.h  SDL_error.h  SDL_filesystem.h  SDL_guid.h  SDL_keyboard.h  SDL_main.h  SDL_mouse.h  SDL_name.h  SDL_opengl.h  SDL_opengles2_gl2ext.h  SDL_quit.h  SDL_rwops.h  SDL_sensor.h  SDL_stdinc.h  SDL_syswm.h  SDL_timer.h  SDL_touch.h  SDL_vulkan.h
lib/sdl2/mac/SDL2.framework/Versions/Current/Headers/SDL2/: SDL_atomic.h  SDL_audio.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_cpuinfo.h  SDL_gamecontroller.h  SDL_hidapi.h  SDL_log.h  SDL_metal.h  SDL_mutex.h  SDL_opengles2_gl2.h  SDL_power.h  SDL_render.h  SDL_thread.h  SDL_version.h  SDL_video.h
palettes/: values.sh
roms/: arkanoid.nes  instr_test-v5.md
scripts/: build.sh  clean.sh  docker-run.sh  entrypoint.sh  env-check.sh  run.sh  test.sh
src/: bus.cpp  cartridge.cpp  cpu.cpp  main.cpp  ppu.cpp  utils.cpp
src/mappers/: mapper0.cpp  mapper1.cpp  mapper2.cpp
states/: load-state-test.json  state.json  testtt.json
tests/: apu_test.cpp  cart_test.cpp  cpu_test.cpp  cpu_test.h  ppu_test.cpp  ppu_test_json.cpp  rom_test.cpp  sample.cpp  state_test.cpp
tests/json/: 61.json  65.json  69.json  6d.json  71.json  75.json  79.json  7d.json  a9.json  e1.json  e5.json  e9.json  ed.json  f1.json  f5.json  f9.json  fd.json  temp.json
tests/tools/: custom.nes  makerom.py
tools/asm/: build.sh  custom.s  readme.md
tools/python/: CMakeLists.txt  emu.cpp  emu.py  readme.md  test.py
tools/python/scripts/: build.sh
